--- a/basicapp/templates/basicapp/base.html
+++ b/basicapp/templates/basicapp/base.html
@@ -37,21 +37,19 @@
         </button>
         <div class="collapse navbar-collapse ms-3" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item ">
+              <a class="nav-link "  href="{% url 'basicapp:index' %}">Home</a>
+            </li>
+            {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'basicapp:index' %}">Home</a>
+              <a class="nav-link" href="{% url 'basicapp:myprods' %}">My Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="{% url 'basicapp:add-prod' %}">Add Products</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Dropdown </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
+            {% endif %}
+            
+            
           </ul>
           {% if user.is_authenticated %}
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 profile-menu">
@@ -60,13 +58,15 @@
                 <div class="profile-pic me-2">
                   <img  src="{{ user.userprofile.profile_pic.url }}" alt="Profile Picture" />
                 </div>
-                <!-- You can also use icon as follows: -->
-                <!--  <i class="fas fa-user"></i> -->
                 {{user.username}}
               </a>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item text-center" href="{% url 'user:logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a>
+                  <a class="dropdown-item " href="{% url 'user:profile' %}"><i class="fa-solid fa-user"></i> My Profile</a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <a class="dropdown-item " href="{% url 'user:logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a>
                 </li>
               </ul>
             </li>
