--- a/user/static/user/css/profile.css
+++ b/user/static/user/css/profile.css
@@ -1,11 +1,8 @@
-/* body{margin-top:20px;
-    color: #bcd0f7;
-        background: #1A233A;
-    } */
+
 
 .account-settings .user-profile {
   margin: 0 0 1rem 0;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
   text-align: center;
 }
 .account-settings .user-profile .user-avatar {
@@ -40,12 +37,27 @@
   margin-bottom: 1rem;
   background-image: linear-gradient(-30deg, rgba(189, 21, 11, 0.1), transparent 50%);
 }
-.form-control {
+.form-group input {
   border: 1px solid #596280;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
+  width:100%;
+  padding:0.5rem;
+  margin-top: 8px;
   border-radius: 2px;
   font-size: 0.825rem;
   background: #191e2b;
   color: #bcd0f7;
 }
+.form-group textarea {
+  border: 1px solid #596280;
+  width:100%;
+  height: 100px;
+  padding:0.5rem;
+  margin-top: 8px;
+  border-radius: 2px;
+  font-size: 0.825rem;
+  background: #191e2b;
+  color: #bcd0f7;
+}
+
+
+
