--- a/user/templates/user/profile_form.html
+++ b/user/templates/user/profile_form.html
@@ -1,103 +1,89 @@
-{% extends 'basicapp/base.html' %}
-{% load static %}
-
-{% block body %}
+{% extends 'basicapp/base.html' %} {% load static %} {% block body %}
 <link rel="stylesheet" type="text/css" href="{% static 'user/css/profile.css' %}" />
 <div class="container py-4">
-    <h1 class="h1 text-center" id="pageHeaderTitle">Update Profile</h1>
-    <div class="row gutters ">
-        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 ">
-            <div class="card h-100">
-                <div class="card-body ">
-                    <div class="account-settings">
-                        <div class="user-profile">
-                            <div class="user-avatar">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
-                            </div>
-                            <h5 class="user-name">Yuki Hayashi</h5>
-                            <h6 class="user-email">yuki@Maxwell.com</h6>
-                        </div>
-                        <div class="about">
-                            <h5 class="mb-2 text-primary">About</h5>
-                            <p>I'm Yuki. Full Stack Designer I enjoy creating user-centric, delightful and human experiences.</p>
-                        </div>
-                    </div>
+  <h1 class="h1 text-center" id="pageHeaderTitle">Update Profile</h1>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="row gutters">
+      <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mb-3">
+        <div class="card h-100">
+          <div class="card-body ">
+            <div class="account-settings">
+              <div class="user-profile">
+                <div class="user-avatar">
+                  <label style="cursor: pointer;">
+                    <img src="{{user.userprofile.profile_pic.url}}" alt="profile pic" id="up-pic" />
+                    <input type="file" name="profile_pic" accept="image/*" id="id_profile_pic" onchange="fileUpload(event)" style="display: none;">
+                  </label>
+                  
                 </div>
+                <h5 class="user-name">{{user.username}}</h5>
+                <h6 class="user-email">{{user.email}}</h6>
+              </div>
+              <div class="about">
+                <h5 class="mb-2 text-primary">About</h5>
+                <div class="form-group" style="padding: 0; margin:0">{{form.about}}</div>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
-            <div class="card h-100">
-                <div class="card-body">
-                    <div class="row gutters">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                            <h6 class="mb-3 text-primary">Personal Details</h6>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="fullName">Full Name</label>
-                                <input type="text" class="form-control" id="fullName" placeholder="Enter full name">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="eMail">Email</label>
-                                <input type="email" class="form-control" id="eMail" placeholder="Enter email ID">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="phone">Phone</label>
-                                <input type="text" class="form-control" id="phone" placeholder="Enter phone number">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="website">Website URL</label>
-                                <input type="url" class="form-control" id="website" placeholder="Website url">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row gutters">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                            <h6 class="mb-3 text-primary">Address</h6>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="Street">Street</label>
-                                <input type="name" class="form-control" id="Street" placeholder="Enter Street">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="ciTy">City</label>
-                                <input type="name" class="form-control" id="ciTy" placeholder="Enter City">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="sTate">State</label>
-                                <input type="text" class="form-control" id="sTate" placeholder="Enter State">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="form-group">
-                                <label for="zIp">Zip Code</label>
-                                <input type="text" class="form-control" id="zIp" placeholder="Zip Code">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row gutters">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                            <div class="text-right">
-                                <button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
-                                <button type="button" id="submit" name="submit" class="btn btn-primary">Update</button>
-                            </div>
-                        </div>
-                    </div>
+      </div>
+      <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12 mb-3">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="row gutters">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <h6 class="mb-3 text-primary">Personal Details</h6>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="id_name">Full Name</label>
+                  {{form.name}}
                 </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="form-group">
+                  <label for="id_phone">Phone Number</label>
+                  {{form.phone}}
+                </div>
+              </div>
             </div>
+            <div class="row gutters mt-4" >
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <h6 class="mb-3 text-primary">Address</h6>
+              </div>
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="form-group">
+                  <label for="id_address">Address</label>
+                  {{form.address}}
+                </div>
+              </div>
+            </div>
+            <div class="row gutters mt-4">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="text-right">
+                  <button type="submit" class="btn btn-primary mt-3" ><i class="fa-solid fa-pen-to-square me-2"></i>Update</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-    </div>
-    
+  </form>
+</div>
+
+<script>
+  const fileUpload = (event) => {
+      const files = event.target.files;
+      const filesLength = files.length;
+      if (filesLength > 0) {
+        const imageSrc = URL.createObjectURL(files[0]);
+        const imagePreviewElement = document.querySelector("#up-pic");
+        imagePreviewElement.src = imageSrc;
+        imagePreviewElement.style.display = "block";
+      }
+    };
+</script>
+
 {% endblock %}
